@@ -83,6 +83,8 @@ class RemoteInvocationHandler implements InvocationHandler
          throw new DBusExecutionException(e.getMessage());
       }
       MethodCall call = new MethodCall(ro.busname, ro.objectpath, DBusConnection.dollar_pattern.matcher(ro.iface.getName()).replaceAll("."), m.getName(), args);
+      if (ro.autostart) call.setFlags(MethodCall.AUTO_START);
+      if (async) call.setFlags(MethodCall.ASYNC);
       if (m.isAnnotationPresent(DBus.Method.NoReply.class)) call.setFlags(MethodCall.NO_REPLY);
       synchronized (conn.outgoing) {
          conn.outgoing.add(call);
@@ -144,7 +146,7 @@ class RemoteInvocationHandler implements InvocationHandler
             return null;
       }
       else if (method.getName().equals("toString"))
-         return remote.busname+":"+remote.objectpath+":"+remote.iface;
+         return remote.toString();
 
       return executeRemoteMethod(remote, method, conn, iface, false, args);
    }
